k8s/django-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: django
  name: django
spec:
  ports:
  - name: "5000"
    port: 5000
    targetPort: 5000
  selector:
    app: django
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: django
  name: django
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - image: pentux/pygrn_k8s_workshop:latest
        name: django
        args:
        - /start
        resources: {}
        volumeMounts:
        - mountPath: /code/static
          name: static-volume
      restartPolicy: Always
      volumes:
      - name: static-volume
        persistentVolumeClaim:
          claimName: static-volume
status: {}
